wordpress/base/db-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: db
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
      - name: db
        image: mysql:latest
        ports:
        - name: mysql
          containerPort: 3306
      nodeSelector:
        beta.kubernetes.io/os: linux
