wordpress/base/wordpress-db-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-db
  labels:
    name: wordpress-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: wordpress-db
  template:
    metadata:
      labels:
        name: wordpress-db
    spec:
      containers:
      - name: wordpress-db
        image: mysql:latest
        ports:
        - name: mysql
          containerPort: 3306
      nodeSelector:
        beta.kubernetes.io/os: linux
