wordpress/base/db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: db
spec:
  ports:
    # the port that this service should serve on
  - port: 3306
    targetPort: 3306
  selector:
    name: db
