wordpress/base/phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: phpmyadmin
