wordpress/base/ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ui
