wordpress/base/wordpress-phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-phpmyadmin
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress-phpmyadmin
