wordpress/base/wordpress-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-ui
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wordpress-ui
