wordpress/base/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-localhost
spec:
  ingressClassName: nginx
  rules:
    - host: test.local
      http:
        paths:
          - backend:
              service:
                name: ui
                port:
                  number: 80
            path: /
            pathType: Prefix
