wordpress/base/wordpress-db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ui-localhost
spec:
  ingressClassName: nginx
  rules:
    - host: test.local
      http:
        paths:
          - backend:
              service:
                name: wordpress-db
                port:
                  number: 3306
            path: /
            pathType: Prefix
